platform/kubeflow/v1.8.1/_deploy/nutanix-kubeflow-kustomizations/apps/pipeline/upstream/env/ntnx/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubeflow-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '${istio_wildcard_ingress_subdomain}'
    port:
      name: http
      number: 80
      protocol: HTTP
    # Upgrade HTTP to HTTPS
    tls:
      httpsRedirect: true
  - hosts:
    - '${istio_wildcard_ingress_subdomain}'
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: kubeflow-tls
